playscript-js/src/PlayScriptParser.js
// Generated from src/PlayScript.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var PlayScriptListener = require('./PlayScriptListener').PlayScriptListener;
var PlayScriptVisitor = require('./PlayScriptVisitor').PlayScriptVisitor;

var grammarFileName = "PlayScript.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'abstract'", "'assert'", "'boolean'", "'break'", 
                     "'byte'", "'case'", "'catch'", "'char'", "'class'", 
                     "'const'", "'continue'", "'default'", "'do'", "'double'", 
                     "'else'", "'enum'", "'extends'", "'final'", "'finally'", 
                     "'float'", "'for'", "'if'", "'goto'", "'implements'", 
                     "'import'", "'instanceof'", "'int'", "'interface'", 
                     "'long'", "'native'", "'new'", "'package'", "'private'", 
                     "'protected'", "'public'", "'return'", "'short'", "'static'", 
                     "'strictfp'", "'super'", "'switch'", "'synchronized'", 
                     "'this'", "'throw'", "'throws'", "'transient'", "'try'", 
                     "'void'", "'volatile'", "'while'", "'function'", "'string'", 
                     null, null, null, null, null, null, null, null, null, 
                     "'null'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "','", "'.'", "'='", "'>'", "'<'", "'!'", "'~'", 
                     "'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'&&'", 
                     "'||'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", 
                     "'&'", "'|'", "'^'", "'%'", "'+='", "'-='", "'*='", 
                     "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", 
                     "'>>>='", "'->'", "'::'", "'@'", "'...'" ];

var symbolicNames = [ null, "ABSTRACT", "ASSERT", "BOOLEAN", "BREAK", "BYTE", 
                      "CASE", "CATCH", "CHAR", "CLASS", "CONST", "CONTINUE", 
                      "DEFAULT", "DO", "DOUBLE", "ELSE", "ENUM", "EXTENDS", 
                      "FINAL", "FINALLY", "FLOAT", "FOR", "IF", "GOTO", 
                      "IMPLEMENTS", "IMPORT", "INSTANCEOF", "INT", "INTERFACE", 
                      "LONG", "NATIVE", "NEW", "PACKAGE", "PRIVATE", "PROTECTED", 
                      "PUBLIC", "RETURN", "SHORT", "STATIC", "STRICTFP", 
                      "SUPER", "SWITCH", "SYNCHRONIZED", "THIS", "THROW", 
                      "THROWS", "TRANSIENT", "TRY", "VOID", "VOLATILE", 
                      "WHILE", "FUNCTION", "STRING", "DECIMAL_LITERAL", 
                      "HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL", "FLOAT_LITERAL", 
                      "HEX_FLOAT_LITERAL", "BOOL_LITERAL", "CHAR_LITERAL", 
                      "STRING_LITERAL", "NULL_LITERAL", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", 
                      "DOT", "ASSIGN", "GT", "LT", "BANG", "TILDE", "QUESTION", 
                      "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", "AND", "OR", 
                      "INC", "DEC", "ADD", "SUB", "MUL", "DIV", "BITAND", 
                      "BITOR", "CARET", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", 
                      "MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", 
                      "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", 
                      "URSHIFT_ASSIGN", "ARROW", "COLONCOLON", "AT", "ELLIPSIS", 
                      "WS", "COMMENT", "LINE_COMMENT", "IDENTIFIER" ];

var ruleNames =  [ "classDeclaration", "classBody", "classBodyDeclaration", 
                   "memberDeclaration", "functionDeclaration", "functionBody", 
                   "typeTypeOrVoid", "qualifiedNameList", "formalParameters", 
                   "formalParameterList", "formalParameter", "lastFormalParameter", 
                   "variableModifier", "qualifiedName", "fieldDeclaration", 
                   "constructorDeclaration", "variableDeclarators", "variableDeclarator", 
                   "variableDeclaratorId", "variableInitializer", "arrayInitializer", 
                   "classOrInterfaceType", "typeArgument", "literal", "integerLiteral", 
                   "floatLiteral", "prog", "block", "blockStatements", "blockStatement", 
                   "statement", "switchBlockStatementGroup", "switchLabel", 
                   "forControl", "forInit", "enhancedForControl", "parExpression", 
                   "expressionList", "functionCall", "expression", "primary", 
                   "typeList", "typeType", "functionType", "primitiveType", 
                   "creator", "superSuffix", "arguments" ];

function PlayScriptParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

PlayScriptParser.prototype = Object.create(antlr4.Parser.prototype);
PlayScriptParser.prototype.constructor = PlayScriptParser;

Object.defineProperty(PlayScriptParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

PlayScriptParser.EOF = antlr4.Token.EOF;
PlayScriptParser.ABSTRACT = 1;
PlayScriptParser.ASSERT = 2;
PlayScriptParser.BOOLEAN = 3;
PlayScriptParser.BREAK = 4;
PlayScriptParser.BYTE = 5;
PlayScriptParser.CASE = 6;
PlayScriptParser.CATCH = 7;
PlayScriptParser.CHAR = 8;
PlayScriptParser.CLASS = 9;
PlayScriptParser.CONST = 10;
PlayScriptParser.CONTINUE = 11;
PlayScriptParser.DEFAULT = 12;
PlayScriptParser.DO = 13;
PlayScriptParser.DOUBLE = 14;
PlayScriptParser.ELSE = 15;
PlayScriptParser.ENUM = 16;
PlayScriptParser.EXTENDS = 17;
PlayScriptParser.FINAL = 18;
PlayScriptParser.FINALLY = 19;
PlayScriptParser.FLOAT = 20;
PlayScriptParser.FOR = 21;
PlayScriptParser.IF = 22;
PlayScriptParser.GOTO = 23;
PlayScriptParser.IMPLEMENTS = 24;
PlayScriptParser.IMPORT = 25;
PlayScriptParser.INSTANCEOF = 26;
PlayScriptParser.INT = 27;
PlayScriptParser.INTERFACE = 28;
PlayScriptParser.LONG = 29;
PlayScriptParser.NATIVE = 30;
PlayScriptParser.NEW = 31;
PlayScriptParser.PACKAGE = 32;
PlayScriptParser.PRIVATE = 33;
PlayScriptParser.PROTECTED = 34;
PlayScriptParser.PUBLIC = 35;
PlayScriptParser.RETURN = 36;
PlayScriptParser.SHORT = 37;
PlayScriptParser.STATIC = 38;
PlayScriptParser.STRICTFP = 39;
PlayScriptParser.SUPER = 40;
PlayScriptParser.SWITCH = 41;
PlayScriptParser.SYNCHRONIZED = 42;
PlayScriptParser.THIS = 43;
PlayScriptParser.THROW = 44;
PlayScriptParser.THROWS = 45;
PlayScriptParser.TRANSIENT = 46;
PlayScriptParser.TRY = 47;
PlayScriptParser.VOID = 48;
PlayScriptParser.VOLATILE = 49;
PlayScriptParser.WHILE = 50;
PlayScriptParser.FUNCTION = 51;
PlayScriptParser.STRING = 52;
PlayScriptParser.DECIMAL_LITERAL = 53;
PlayScriptParser.HEX_LITERAL = 54;
PlayScriptParser.OCT_LITERAL = 55;
PlayScriptParser.BINARY_LITERAL = 56;
PlayScriptParser.FLOAT_LITERAL = 57;
PlayScriptParser.HEX_FLOAT_LITERAL = 58;
PlayScriptParser.BOOL_LITERAL = 59;
PlayScriptParser.CHAR_LITERAL = 60;
PlayScriptParser.STRING_LITERAL = 61;
PlayScriptParser.NULL_LITERAL = 62;
PlayScriptParser.LPAREN = 63;
PlayScriptParser.RPAREN = 64;
PlayScriptParser.LBRACE = 65;
PlayScriptParser.RBRACE = 66;
PlayScriptParser.LBRACK = 67;
PlayScriptParser.RBRACK = 68;
PlayScriptParser.SEMI = 69;
PlayScriptParser.COMMA = 70;
PlayScriptParser.DOT = 71;
PlayScriptParser.ASSIGN = 72;
PlayScriptParser.GT = 73;
PlayScriptParser.LT = 74;
PlayScriptParser.BANG = 75;
PlayScriptParser.TILDE = 76;
PlayScriptParser.QUESTION = 77;
PlayScriptParser.COLON = 78;
PlayScriptParser.EQUAL = 79;
PlayScriptParser.LE = 80;
PlayScriptParser.GE = 81;
PlayScriptParser.NOTEQUAL = 82;
PlayScriptParser.AND = 83;
PlayScriptParser.OR = 84;
PlayScriptParser.INC = 85;
PlayScriptParser.DEC = 86;
PlayScriptParser.ADD = 87;
PlayScriptParser.SUB = 88;
PlayScriptParser.MUL = 89;
PlayScriptParser.DIV = 90;
PlayScriptParser.BITAND = 91;
PlayScriptParser.BITOR = 92;
PlayScriptParser.CARET = 93;
PlayScriptParser.MOD = 94;
PlayScriptParser.ADD_ASSIGN = 95;
PlayScriptParser.SUB_ASSIGN = 96;
PlayScriptParser.MUL_ASSIGN = 97;
PlayScriptParser.DIV_ASSIGN = 98;
PlayScriptParser.AND_ASSIGN = 99;
PlayScriptParser.OR_ASSIGN = 100;
PlayScriptParser.XOR_ASSIGN = 101;
PlayScriptParser.MOD_ASSIGN = 102;
PlayScriptParser.LSHIFT_ASSIGN = 103;
PlayScriptParser.RSHIFT_ASSIGN = 104;
PlayScriptParser.URSHIFT_ASSIGN = 105;
PlayScriptParser.ARROW = 106;
PlayScriptParser.COLONCOLON = 107;
PlayScriptParser.AT = 108;
PlayScriptParser.ELLIPSIS = 109;
PlayScriptParser.WS = 110;
PlayScriptParser.COMMENT = 111;
PlayScriptParser.LINE_COMMENT = 112;
PlayScriptParser.IDENTIFIER = 113;

PlayScriptParser.RULE_classDeclaration = 0;
PlayScriptParser.RULE_classBody = 1;
PlayScriptParser.RULE_classBodyDeclaration = 2;
PlayScriptParser.RULE_memberDeclaration = 3;
PlayScriptParser.RULE_functionDeclaration = 4;
PlayScriptParser.RULE_functionBody = 5;
PlayScriptParser.RULE_typeTypeOrVoid = 6;
PlayScriptParser.RULE_qualifiedNameList = 7;
PlayScriptParser.RULE_formalParameters = 8;
PlayScriptParser.RULE_formalParameterList = 9;
PlayScriptParser.RULE_formalParameter = 10;
PlayScriptParser.RULE_lastFormalParameter = 11;
PlayScriptParser.RULE_variableModifier = 12;
PlayScriptParser.RULE_qualifiedName = 13;
PlayScriptParser.RULE_fieldDeclaration = 14;
PlayScriptParser.RULE_constructorDeclaration = 15;
PlayScriptParser.RULE_variableDeclarators = 16;
PlayScriptParser.RULE_variableDeclarator = 17;
PlayScriptParser.RULE_variableDeclaratorId = 18;
PlayScriptParser.RULE_variableInitializer = 19;
PlayScriptParser.RULE_arrayInitializer = 20;
PlayScriptParser.RULE_classOrInterfaceType = 21;
PlayScriptParser.RULE_typeArgument = 22;
PlayScriptParser.RULE_literal = 23;
PlayScriptParser.RULE_integerLiteral = 24;
PlayScriptParser.RULE_floatLiteral = 25;
PlayScriptParser.RULE_prog = 26;
PlayScriptParser.RULE_block = 27;
PlayScriptParser.RULE_blockStatements = 28;
PlayScriptParser.RULE_blockStatement = 29;
PlayScriptParser.RULE_statement = 30;
PlayScriptParser.RULE_switchBlockStatementGroup = 31;
PlayScriptParser.RULE_switchLabel = 32;
PlayScriptParser.RULE_forControl = 33;
PlayScriptParser.RULE_forInit = 34;
PlayScriptParser.RULE_enhancedForControl = 35;
PlayScriptParser.RULE_parExpression = 36;
PlayScriptParser.RULE_expressionList = 37;
PlayScriptParser.RULE_functionCall = 38;
PlayScriptParser.RULE_expression = 39;
PlayScriptParser.RULE_primary = 40;
PlayScriptParser.RULE_typeList = 41;
PlayScriptParser.RULE_typeType = 42;
PlayScriptParser.RULE_functionType = 43;
PlayScriptParser.RULE_primitiveType = 44;
PlayScriptParser.RULE_creator = 45;
PlayScriptParser.RULE_superSuffix = 46;
PlayScriptParser.RULE_arguments = 47;


function ClassDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlayScriptParser.RULE_classDeclaration;
    return this;
}

ClassDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClassDeclarationContext.prototype.constructor = ClassDeclarationContext;

ClassDeclarationContext.prototype.CLASS = function() {
    return this.getToken(PlayScriptParser.CLASS, 0);
};

ClassDeclarationContext.prototype.IDENTIFIER = function() {
    return this.getToken(PlayScriptParser.IDENTIFIER, 0);
};

ClassDeclarationContext.prototype.classBody = function() {
    return this.getTypedRuleContext(ClassBodyContext,0);
};

ClassDeclarationContext.prototype.EXTENDS = function() {
    return this.getToken(PlayScriptParser.EXTENDS, 0);
};

ClassDeclarationContext.prototype.typeType = function() {
    return this.getTypedRuleContext(TypeTypeContext,0);
};

ClassDeclarationContext.prototype.IMPLEMENTS = function() {
    return this.getToken(PlayScriptParser.IMPLEMENTS, 0);
};

ClassDeclarationContext.prototype.typeList = function() {
    return this.getTypedRuleContext(TypeListContext,0);
};

ClassDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.enterClassDeclaration(this);
	}
};

ClassDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.exitClassDeclaration(this);
	}
};

ClassDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PlayScriptVisitor ) {
        return visitor.visitClassDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PlayScriptParser.ClassDeclarationContext = ClassDeclarationContext;

PlayScriptParser.prototype.classDeclaration = function() {

    var localctx = new ClassDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, PlayScriptParser.RULE_classDeclaration);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 96;
        this.match(PlayScriptParser.CLASS);
        this.state = 97;
        this.match(PlayScriptParser.IDENTIFIER);
        this.state = 100;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===PlayScriptParser.EXTENDS) {
            this.state = 98;
            this.match(PlayScriptParser.EXTENDS);
            this.state = 99;
            this.typeType();
        }

        this.state = 104;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===PlayScriptParser.IMPLEMENTS) {
            this.state = 102;
            this.match(PlayScriptParser.IMPLEMENTS);
            this.state = 103;
            this.typeList();
        }

        this.state = 106;
        this.classBody();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ClassBodyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlayScriptParser.RULE_classBody;
    return this;
}

ClassBodyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClassBodyContext.prototype.constructor = ClassBodyContext;

ClassBodyContext.prototype.LBRACE = function() {
    return this.getToken(PlayScriptParser.LBRACE, 0);
};

ClassBodyContext.prototype.RBRACE = function() {
    return this.getToken(PlayScriptParser.RBRACE, 0);
};

ClassBodyContext.prototype.classBodyDeclaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ClassBodyDeclarationContext);
    } else {
        return this.getTypedRuleContext(ClassBodyDeclarationContext,i);
    }
};

ClassBodyContext.prototype.enterRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.enterClassBody(this);
	}
};

ClassBodyContext.prototype.exitRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.exitClassBody(this);
	}
};

ClassBodyContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PlayScriptVisitor ) {
        return visitor.visitClassBody(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PlayScriptParser.ClassBodyContext = ClassBodyContext;

PlayScriptParser.prototype.classBody = function() {

    var localctx = new ClassBodyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, PlayScriptParser.RULE_classBody);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 108;
        this.match(PlayScriptParser.LBRACE);
        this.state = 112;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << PlayScriptParser.BOOLEAN) | (1 << PlayScriptParser.BYTE) | (1 << PlayScriptParser.CHAR) | (1 << PlayScriptParser.CLASS) | (1 << PlayScriptParser.DOUBLE) | (1 << PlayScriptParser.FLOAT) | (1 << PlayScriptParser.INT) | (1 << PlayScriptParser.LONG))) !== 0) || ((((_la - 37)) & ~0x1f) == 0 && ((1 << (_la - 37)) & ((1 << (PlayScriptParser.SHORT - 37)) | (1 << (PlayScriptParser.VOID - 37)) | (1 << (PlayScriptParser.FUNCTION - 37)) | (1 << (PlayScriptParser.STRING - 37)))) !== 0) || _la===PlayScriptParser.SEMI || _la===PlayScriptParser.IDENTIFIER) {
            this.state = 109;
            this.classBodyDeclaration();
            this.state = 114;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 115;
        this.match(PlayScriptParser.RBRACE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ClassBodyDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlayScriptParser.RULE_classBodyDeclaration;
    return this;
}

ClassBodyDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClassBodyDeclarationContext.prototype.constructor = ClassBodyDeclarationContext;

ClassBodyDeclarationContext.prototype.SEMI = function() {
    return this.getToken(PlayScriptParser.SEMI, 0);
};

ClassBodyDeclarationContext.prototype.memberDeclaration = function() {
    return this.getTypedRuleContext(MemberDeclarationContext,0);
};

ClassBodyDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.enterClassBodyDeclaration(this);
	}
};

ClassBodyDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.exitClassBodyDeclaration(this);
	}
};

ClassBodyDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PlayScriptVisitor ) {
        return visitor.visitClassBodyDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PlayScriptParser.ClassBodyDeclarationContext = ClassBodyDeclarationContext;

PlayScriptParser.prototype.classBodyDeclaration = function() {

    var localctx = new ClassBodyDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, PlayScriptParser.RULE_classBodyDeclaration);
    try {
        this.state = 119;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case PlayScriptParser.SEMI:
            this.enterOuterAlt(localctx, 1);
            this.state = 117;
            this.match(PlayScriptParser.SEMI);
            break;
        case PlayScriptParser.BOOLEAN:
        case PlayScriptParser.BYTE:
        case PlayScriptParser.CHAR:
        case PlayScriptParser.CLASS:
        case PlayScriptParser.DOUBLE:
        case PlayScriptParser.FLOAT:
        case PlayScriptParser.INT:
        case PlayScriptParser.LONG:
        case PlayScriptParser.SHORT:
        case PlayScriptParser.VOID:
        case PlayScriptParser.FUNCTION:
        case PlayScriptParser.STRING:
        case PlayScriptParser.IDENTIFIER:
            this.enterOuterAlt(localctx, 2);
            this.state = 118;
            this.memberDeclaration();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function MemberDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlayScriptParser.RULE_memberDeclaration;
    return this;
}

MemberDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MemberDeclarationContext.prototype.constructor = MemberDeclarationContext;

MemberDeclarationContext.prototype.functionDeclaration = function() {
    return this.getTypedRuleContext(FunctionDeclarationContext,0);
};

MemberDeclarationContext.prototype.fieldDeclaration = function() {
    return this.getTypedRuleContext(FieldDeclarationContext,0);
};

MemberDeclarationContext.prototype.classDeclaration = function() {
    return this.getTypedRuleContext(ClassDeclarationContext,0);
};

MemberDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.enterMemberDeclaration(this);
	}
};

MemberDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.exitMemberDeclaration(this);
	}
};

MemberDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PlayScriptVisitor ) {
        return visitor.visitMemberDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PlayScriptParser.MemberDeclarationContext = MemberDeclarationContext;

PlayScriptParser.prototype.memberDeclaration = function() {
